# covey

./: README.md  pyproject.toml
.github/workflows/: pre-merge.yaml  release.yaml
covey/flock/: env_test.py  generator.py
covey/predator_prey/: conftest.py  generator.py
docs/source/: conf.py  environments.rst  index.rst
docs/source/environments/: flock.rst  predator_prey.rst
src/covey/: __init__.py
src/covey/common/: __init__.py
src/covey/flock/: __init__.py  env.py  generator.py  observations.py  rewards.py  viewer.py
src/covey/predator_prey/: __init__.py  env.py  generator.py  observations.py  rewards.py
src/floxs/: __init__.py
src/floxs/flock/: __init__.py  env.py  generator.py  observations.py  rewards.py  types.py
src/floxs/predator_prey/: env.py  generator.py  viewer.py
swarm_envs/common/: utils.py
swarm_envs/flock/: __init__.py  generator.py  generator_test.py  observations.py  rewards.py  rewards_test.py  viewer.py
swarm_envs/predator_prey/: __init__.py  env.py  generator.py  generator_test.py  observations_test.py  rewards_test.py  viewer.py
swarms_envs/common/: utils.py
swarms_envs/flock/: conftest.py  env.py  generator.py  observations.py  observations_test.py  rewards.py  rewards_test.py  types.py  viewer.py
swarms_envs/predator_prey/: env.py  env_test.py  generator.py  observations.py  observations_test.py  rewards.py  rewards_test.py  types.py  viewer.py
tests/test_flock/: conftest.py  env_test.py  generator_test.py  observations_test.py  rewards_test.py
tests/test_predator_prey/: conftest.py  env_test.py  generator_test.py  observations_test.py  rewards_test.py
