[tool.poetry]
name = "covey"
version = "0.1.0"
description = "Multi-agent Flock Environments Implemented in JAX"
authors = ["zombie-einstein <zombie-einstein@proton.me>"]
readme = "README.md"
packages = [{include = "covey"}]
homepage = "https://github.com/zombie-einstein/covey"
repository = "https://github.com/zombie-einstein/covey"
keywords = ["jax", "rl", "multi-agent rl"]

[tool.poetry.dependencies]
python = ">=3.10,<3.12"
jax = "^0.4.4"
chex = "^0.1.6"
matplotlib = "^3.7.1"
esquilax = ">=2.0.0"
jumanji = "^1.1.1"

[tool.poetry.group.dev.dependencies]
pre-commit = "^2.21.0"
taskipy = "^1.10.3"
pytest = "^7.2.1"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.taskipy.tasks]
test = { cmd = "pytest covey", help="Run tests"}
lint = { cmd = "pre-commit run --all-files", help="Code format checks"}
