[tool.poetry]
name = "covey"
version = "0.1.0"
description = "Multi-agent RL flock and swarm environments implemented in JAX"
authors = ["zombie-einstein <zombie-einstein@proton.me>"]
readme = "README.md"
packages = [{include = "covey", from = "src"}]
repository = "https://github.com/zombie-einstein/covey"
homepage = "https://zombie-einstein.github.io/covey"
documentation = "https://zombie-einstein.github.io/covey"
license = "MIT"
keywords = [
  "simulation",
  "reinforcement-learning",
]
classifiers = [
  "Development Status :: 4 - Beta",
  "Programming Language :: Python",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Programming Language :: Python :: Implementation :: CPython",
  "Programming Language :: Python :: Implementation :: PyPy",
  "License :: OSI Approved :: MIT License",
  "Environment :: GPU",
  "Intended Audience :: Science/Research",
  "Topic :: Scientific/Engineering :: Artificial Intelligence",
  "Topic :: Scientific/Engineering :: Artificial Life",
]

[tool.poetry.dependencies]
python = ">=3.10,<3.12"
jax = "^0.4.4"
chex = "^0.1.6"
esquilax = ">=2.0.0"
jumanji = "^1.1.1"

[tool.poetry.group.dev.dependencies]
pre-commit = "^2.21.0"
taskipy = "^1.10.3"
pytest = "^7.2.1"
sphinx = "8.1"
piccolo-theme = "^0.24.0"
sphinx-autoapi = "^3.6.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.taskipy.tasks]
test = { cmd = "pytest tests", help="Run tests"}
lint = { cmd = "pre-commit run --all-files", help="Code format checks"}
docs = { cmd = "sphinx-build -W -b html docs/source docs/build", help="Build docs"}
pre-commit = "task test && task lint && task docs"
